config-root/boa/gateway/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: boa-gateway-http
  namespace: boa
spec:
  parentRefs:
  - kind: Gateway
    name: boa-gateway
#  hostnames:
#  - "store.example.com"
  rules:
  - backendRefs:
    - name: frontend
      port: 80
